# homeserver

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  setup.sh
.github/workflows/: homed.yml
home/: .env.example  README.md  docker-compose.yml  init-databases.sql  setup.sh
home/backup/: backup.env.example  backup.service  backup.sh  backup.timer  setup.sh
home/homed/: Cargo.toml  README.md  config.example.toml  deploy.sh  homed.service
home/homed/src/: alerts.rs  checks.rs  config.rs  main.rs  metadata.rs  organizer.rs  watcher.rs
home/services/: .env.example  docker-compose.yml  setup.sh
home/services/traefik/: traefik.yml.example
home/traefik/: traefik.yml
home/traefik/dynamic/: wildcard.yml
homed/: Cargo.toml  README.md  config.example.toml  config.toml  deploy.sh
homed/src/: alerts.rs  checks.rs  config.rs  main.rs  metadata.rs  mover.rs  nextcloud.rs  organizer.rs  scanner.rs  watcher.rs
vps/: .env.example  Caddyfile  README.md  docker-compose.yml  setup.sh
vps/authelia/: configuration.yml
