[package]
name = "homed"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
notify = "8"
toml = "1"
thiserror = "2"
anyhow = "1"
chrono = "0.4"
nom-exif = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
